--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.18",
     "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
