--- a/app/package.json
+++ b/app/package.json
@@ -16,19 +16,17 @@
     "bootstrap": "^5.3.8",
     "connect-history-api-fallback": "^2.0.0",
     "framer-motion": "^12.23.24",
+    "html5-qrcode": "^2.3.8",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.18",
-    "react-qr-reader": "^3.0.0-beta-1",
-    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
-    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.8.1"
   },
